# fortisoar-api-docs

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: pages.yml
docs/: FortiSOAR-7.6.5-API_Guide.txt
scripts/: api-docs-deploy.sh  api-docs-toggle.sh  build-public.sh  check-sidebar.mjs  probe_execute.py  probe_execute_helloworld.py  probe_taxii.py  probe_taxii_match.py  triage_failures.py
src/: build_curated.py  hydra_to_schema.py  live_test.py  module_schemas.json  module_to_schema.py  sanitize.py  spec_health.py  verify_curated.py
tests/fixtures/: hello-world-1.0.4.tgz
web/: index.html
