[project]
name = "fortisoar-api-docs"
version = "0.1.0"
description = "Live-tested OpenAPI docs for the FortiSOAR API"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "genson>=1.2",
    "python-dotenv>=1.0",
    "jsonschema>=4.21",
]

[tool.setuptools]
package-dir = {"" = "src"}
